:lipstick: feat: Add support for scrollbar and fixing issues

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   --fs-primary: 2rem;
   --fs-small: 1.4rem;
   
-  --bg-th: #093a6c;
+  --bg-thead: #0b2766;
   --bg-body: linear-gradient(120deg, #08053c 0%, #05053b 25%, #0a3870 70%, #6a17b3 90%);
   --bg-error: #df2626;
   --bg-wrapper: #fff;
@@ -142,7 +142,7 @@ body{
   display: flex;
   padding: 5rem 2rem;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
 }
@@ -202,7 +202,7 @@ header , .search-bar{
   display: flex;
   justify-content: center;
   width: 80%;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 table{
@@ -217,6 +217,10 @@ table *{
 }
 
 /* Table head */
+thead{
+  background: var(--bg-thead);
+}
+
 thead th{
   padding: 1.5rem;
   font-weight: 400;
@@ -239,17 +243,18 @@ thead th img{
   height: 2rem;
 }
 
-thead th{
-  background: var(--bg-th);
-}
 
 /* Table rows */
+table tbody{
+  border: 1px solid #3aacce;
+}
+
 tbody tr td{
   color: var(--fc-table);
   padding: 8px;
   text-align: center;
-
 }
+
 tbody tr:nth-child(even){
   background-color: var(--bg-even);
 }
@@ -263,16 +268,13 @@ tbody tr td:first-child{
   text-align: left;
 }
 
-tbody td.user-wrapper{
-  display: flex;
-  flex-direction: row;
-}
+
 
 tbody td.user-wrapper .user{
   display: flex;
   align-items: baseline;
-  gap: 1rem;
   transition: flex-direction 1s;
+  padding-top: 3px;
 }
 
 tbody td.user-wrapper .user a{
@@ -297,7 +299,6 @@ tbody td.user-wrapper img{
 .actions-wrapper{
   display: flex;
   flex-direction: column;
-  gap: 10px;
   align-items: center;
 }
 
@@ -349,7 +350,8 @@ tbody td.user-wrapper .user:hover{
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: #05053b;
+  border-radius: 100vw;
   margin-block-start: 5em;
 }
 
@@ -363,8 +365,8 @@ tbody td.user-wrapper .user:hover{
 /* Scrollbar support */
 @supports (scrollbar-color: red blue){
   *{
-    scrollbar-color: #1348e4 transparent;
-    
+    scrollbar-color: #1348e4 #05053b;
+    scrollbar-width: thin;
   }
 }
 
@@ -393,6 +395,10 @@ tbody td.user-wrapper .user:hover{
     font-size: var(--fs-secondary);
     transition: font-size 1s;
   }
+
+  ::-webkit-scrollbar-track {
+    margin-block-start: 6.3em;
+  }
 }
 
 @media (max-width: 420px){
@@ -402,6 +408,10 @@ tbody td.user-wrapper .user:hover{
 
   .actions *{
     gap: 4px;
+  }
+
+  .actions-wrapper{
+    margin-top: 13px;
   }
 
   tbody td.user-wrapper .user{
